force-app/main/default/objects/Internal_Request__c/Internal_Request__c.object-meta.xml
<CustomObject>
    <customHelpPage>Help_Internal_Request</customHelpPage>
    <description>Object used for raising license and sandbox requests
Also now used for Sales Teams for training requests
And for Deal Support Requests to Pricing Teams</description>
    <label>Internal Request</label>
    <nameField>
        <displayFormat>IR-{0000000}</displayFormat>
        <label>Internal Request  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>