force-app/main/default/objects/Internal_Request__c/fields/Assessed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Revenue__c</fullName>
    <description>The value of the revenue assessed in this request</description>
    <label>Assessed Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>