force-app/main/default/objects/Internal_Request__c/fields/BAU_Work_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>BAU_Work_Centre_Code__c</fullName>
    <description>Work Centre Code for BAU transition</description>
    <inlineHelpText>Required for transition after project</inlineHelpText>
    <label>BAU Work Centre Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>