force-app/main/default/objects/Internal_Request__c/fields/Compatibility_of_Freight__c.field-meta.xml
<CustomField>
    <fullName>Compatibility_of_Freight__c</fullName>
    <description>To indicate the compatibility of freight for this customer</description>
    <label>Compatibility of Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>≥90%</fullName>
            </value>
            <value>
                <fullName>≥80%</fullName>
            </value>
            <value>
                <fullName>≥70%</fullName>
            </value>
            <value>
                <fullName>≥60%</fullName>
            </value>
            <value>
                <fullName>≥50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>