force-app/main/default/objects/Internal_Request__c/fields/Estimated_Freight_Spend_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Freight_Spend_Per_Annum__c</fullName>
    <description>To store the customer&apos;s estimated freight spend per annum related to this request</description>
    <label>Estimated Freight Spend Per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>