force-app/main/default/objects/Internal_Request__c/fields/Main_dispatch_point_Other__c.field-meta.xml
<CustomField>
    <fullName>Main_dispatch_point_Other__c</fullName>
    <description>Main dispatch point Other - to be completed when Main dispatch point is set to Other</description>
    <label>Main dispatch point (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>