force-app/main/default/objects/Internal_Request__c/fields/Number_Of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Licenses__c</fullName>
    <description>Total number of licenses required</description>
    <label>Number Of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>