force-app/main/default/objects/Internal_Request__c/fields/Opportunity_Compatibility_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Compatibility_Constraints__c</fullName>
    <description>To store any opportunity compatibility constraints for the customer associated to this request</description>
    <inlineHelpText>Do any constraints exist against the open opportunity</inlineHelpText>
    <label>Opportunity Compatibility Constraints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>