force-app/main/default/objects/Internal_Request__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Opportunity type where an opportunity is linked to the DSR</description>
    <formula>IF( NOT( ISBLANK(  Opportunity__c  ) ), ( TEXT( Opportunity__r.Type )), &quot;&quot;)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>