force-app/main/default/objects/Internal_Request__c/fields/Price_Relativity__c.field-meta.xml
<CustomField>
    <fullName>Price_Relativity__c</fullName>
    <description>Pricing populates as guidance to PL owner</description>
    <label>Price Relativity</label>
    <type>TextArea</type>
</CustomField>