force-app/main/default/objects/Internal_Request__c/fields/Pricing_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Type__c</fullName>
    <description>For the sales team to select what request type they are making</description>
    <label>Pricing Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business / Growth</fullName>
            </value>
            <value>
                <fullName>Renewal / Rate review</fullName>
            </value>
            <value>
                <fullName>Rate Card Extraction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>