force-app/main/default/objects/Internal_Request__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <description>Product 1 from At Risk Business record</description>
    <formula>At_Risk_Business__r.Product_1__r.Name</formula>
    <label>Product 1</label>
    <type>Text</type>
</CustomField>