force-app/main/default/objects/Internal_Request__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <description>Product 3 from At Risk Business record</description>
    <formula>At_Risk_Business__r.Product_3__r.Name</formula>
    <label>Product 3</label>
    <type>Text</type>
</CustomField>