force-app/main/default/objects/Internal_Request__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Name of the project for which the license or sandbox request is raised</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>