force-app/main/default/objects/Internal_Request__c/fields/Quantity_Required__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Required__c</fullName>
    <label>Quantity Required</label>
    <length>200</length>
    <type>Text</type>
</CustomField>