force-app/main/default/objects/Internal_Request__c/fields/Review_Date_Additional__c.field-meta.xml
<CustomField>
    <fullName>Review_Date_Additional__c</fullName>
    <description>Where additional review required is checked this field needs to be completed</description>
    <label>Review Date (Additional)</label>
    <type>Date</type>
</CustomField>