force-app/main/default/objects/Internal_Request__c/fields/Spend_Delegate_Approver__c.field-meta.xml
<CustomField>
    <fullName>Spend_Delegate_Approver__c</fullName>
    <description>Delegated Approver for the spend on the request</description>
    <label>Spend Delegate Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>