force-app/main/default/objects/Internal_Request__c/fields/Training_type__c.field-meta.xml
<CustomField>
    <fullName>Training_type__c</fullName>
    <label>Training type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>