force-app/main/default/objects/Internal_Request__c/fields/Value_Proposition_to_Ensure_Win__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition_to_Ensure_Win__c</fullName>
    <description>What is the value proposition to ensure win?</description>
    <inlineHelpText>What is the value proposition to ensure win?</inlineHelpText>
    <label>Value Proposition to Ensure Win</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>