force-app/main/default/objects/Internal_Request__c/recordTypes/Other_Salesforce_Product.recordType-meta.xml
<RecordType>
    <fullName>Other_Salesforce_Product</fullName>
    <active>true</active>
    <description>Request For Other Salesforce Product</description>
    <label>Other Salesforce Product</label>
</RecordType>