force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_Domestic_Parcels.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_Domestic_Parcels</fullName>
    <active>true</active>
    <description>Domestic record type for pricing support request on Opportunity</description>
    <label>Domestic Parcels Pricing Request</label>
</RecordType>