force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_Domestic_Parcels_BAR.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_Domestic_Parcels_BAR</fullName>
    <active>true</active>
    <description>Domestic record type for pricing support request on Business at Risk</description>
    <label>Domestic Parcels pricing BAR request</label>
</RecordType>