force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_Domestic_Parcels_gen_enq.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_Domestic_Parcels_gen_enq</fullName>
    <active>true</active>
    <description>Domestic record type for pricing support request on Organisation</description>
    <label>Domestic Parcels pricing general enquiry</label>
</RecordType>