force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_International.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_International</fullName>
    <active>true</active>
    <description>International record type for pricing support request for Opportunity</description>
    <label>International Pricing Request</label>
</RecordType>