force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_International_BAR.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_International_BAR</fullName>
    <active>true</active>
    <description>International record type for pricing support request on Business At Risk</description>
    <label>International pricing BAR request</label>
</RecordType>