force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_International_gen_enq.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_International_gen_enq</fullName>
    <active>true</active>
    <description>International record type for pricing support request on Organisation</description>
    <label>International pricing general enquiry</label>
</RecordType>