force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_StarTrack.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_StarTrack</fullName>
    <active>true</active>
    <description>StarTrack Pricing Support Request on Opportunities</description>
    <label>StarTrack Pricing Request</label>
</RecordType>