force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_StarTrack_BAR.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_StarTrack_BAR</fullName>
    <active>true</active>
    <description>StarTrack Pricing Support Request on Business At Risk</description>
    <label>StarTrack pricing BAR request</label>
</RecordType>