force-app/main/default/objects/Internal_Request__c/recordTypes/Pricing_Request_StarTrack_gen_enq.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request_StarTrack_gen_enq</fullName>
    <active>true</active>
    <description>StarTrack Pricing Support Request on Organisation</description>
    <label>StarTrack pricing general enquiry</label>
</RecordType>