force-app/main/default/objects/Internal_Request__c/recordTypes/Salesforce_License.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_License</fullName>
    <active>true</active>
    <description>Request For Salesforce Licenses</description>
    <label>Salesforce License</label>
</RecordType>