force-app/main/default/objects/Internal_Request__c/recordTypes/Salesforce_Sandbox.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Sandbox</fullName>
    <active>true</active>
    <description>Request For Full or Partial Salesforce Sandbox</description>
    <label>Salesforce Sandbox</label>
</RecordType>