force-app/main/default/objects/Internal_Request__c/recordTypes/System_Training.recordType-meta.xml
<RecordType>
    <fullName>System_Training</fullName>
    <active>true</active>
    <description>Request refresher Salesforce and Apttus training for your teams or one on one Salesforce coaching</description>
    <label>System Training</label>
</RecordType>