force-app/main/default/objects/Internal_Request__c/validationRules/CSQ_must_exist_for_StarTrack_records.validationRule-meta.xml
<ValidationRule>
    <fullName>CSQ_must_exist_for_StarTrack_records</fullName>
    <active>true</active>
    <description>There must be a CSQ record if a StarTrack Pricing Request is started from an Opportunity</description>
    <errorConditionFormula>Count_of_CSQ__c = 0 &amp;&amp;
 RecordType.DeveloperName = &apos;Pricing_Request_StarTrack&apos;</errorConditionFormula>
    <errorMessage>There must be a CSQ record if a StarTrack Pricing Request is started from an Opportunity</errorMessage>
</ValidationRule>