force-app/main/default/objects/Internal_Request__c/validationRules/License_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>License_Type_Required</fullName>
    <active>true</active>
    <description>License Type is required if the the request is for salesforce licenses</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Salesforce_License&apos;, ISPICKVAL(License_Type_Required__c, &apos;&apos;),OR(  RecordType.DeveloperName == &apos;Other_Salesforce_Product&apos;, RecordType.DeveloperName == &apos;Salesforce_License&apos;,RecordType.DeveloperName == &apos;Salesforce_Sandbox&apos;))</errorConditionFormula>
    <errorDisplayField>License_Type_Required__c</errorDisplayField>
    <errorMessage>Please enter the license type required for a license request</errorMessage>
</ValidationRule>