force-app/main/default/objects/Internal_Request__c/validationRules/Multi_year_agreement_type_on_over_1_year.validationRule-meta.xml
<ValidationRule>
    <fullName>Multi_year_agreement_type_on_over_1_year</fullName>
    <active>true</active>
    <description>Multi-year agreement type needs to be completed on any agreement duration greater than 1 year for all pricing request record types</description>
    <errorConditionFormula>BEGINS(RecordType.DeveloperName, &apos;Pricing_Request&apos;) &amp;&amp;
NOT(ISPICKVAL(Agreement_Duration__c, &apos;1 Year&apos;)) &amp;&amp; 
ISBLANK( TEXT(Multi_Year_Agreement_Type__c ))</errorConditionFormula>
    <errorDisplayField>Multi_Year_Agreement_Type__c</errorDisplayField>
    <errorMessage>If Agreement Duration is longer than 1 year, Multi-Year Agreement Type must be completed</errorMessage>
</ValidationRule>