force-app/main/default/objects/Internal_Request__c/validationRules/Specialist_Name_on_Sales_Specialt_Eng.validationRule-meta.xml
<ValidationRule>
    <fullName>Specialist_Name_on_Sales_Specialt_Eng</fullName>
    <active>true</active>
    <description>Name of Specialist must be completed when Product Specialist Engagement checked</description>
    <errorConditionFormula>BEGINS( RecordType.DeveloperName , &apos;Pricing_Request&apos;) &amp;&amp;
Product_Specialist_Engagement__c = TRUE &amp;&amp;  
ISBLANK( Name_of_Product_Specialist__c )</errorConditionFormula>
    <errorDisplayField>Name_of_Product_Specialist__c</errorDisplayField>
    <errorMessage>When the Product Specialist Engagement is checked, the Name of Specialist field must be completed</errorMessage>
</ValidationRule>