force-app/main/default/objects/Internal_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Number_Of_Licenses__c</columns>
    <columns>License_Type_Required__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Work_Centre_Code__c</columns>
    <columns>License_Use_Purpose__c</columns>
    <columns>License_Duration__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Purchase_Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>License_Request_Management_Group</group>
    </sharedTo>
</ListView>