force-app/main/default/objects/Internal_Request__c/listViews/Einstein_Analytic_Access.listView-meta.xml
<ListView>
    <fullName>Einstein_Analytic_Access</fullName>
    <columns>NAME</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Spend_Delegate_Approver__c</columns>
    <columns>Work_Centre_Code__c</columns>
    <columns>License_Type_Required__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Internal_Request__c.Salesforce_License</value>
    </filters>
    <filters>
        <field>License_Type_Required__c</field>
        <operation>contains</operation>
        <value>Einstein</value>
    </filters>
    <label>Einstein Analytic Access</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdmin</group>
    </sharedTo>
</ListView>