force-app/main/default/objects/Internal_Request__c/listViews/Licenses.listView-meta.xml
<ListView>
    <fullName>Licenses</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Expiry_Date__c</columns>
    <columns>BAU_Work_Centre_Code__c</columns>
    <columns>Approver_Name__c</columns>
    <columns>Annual_Renewal_Date__c</columns>
    <columns>Invoice_Data_in_Excel__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Number_Of_Licenses__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Salesforce_Customer_Number__c</columns>
    <columns>Sandbox_Expiry_Date__c</columns>
    <columns>Sandbox_Start_Date__c</columns>
    <columns>Sandbox_Type__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Internal_Request__c.Salesforce_License,Internal_Request__c.Salesforce_Sandbox,Internal_Request__c.Other_Salesforce_Product</value>
    </filters>
    <label>Licenses</label>
    <language>en_US</language>
</ListView>