force-app/main/default/objects/Internal_Request__c/listViews/My_Internal_Request_Systems_Training.listView-meta.xml
<ListView>
    <fullName>My_Internal_Request_Systems_Training</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Training_type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Internal Request Systems Training</label>
    <language>en_US</language>
</ListView>