force-app/main/default/objects/Internal_Request__c/listViews/My_Pricing_Support_Requests.listView-meta.xml
<ListView>
    <fullName>My_Pricing_Support_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Pricing_Analyst_Manager__c</columns>
    <columns>Name_of_Product_Specialist__c</columns>
    <columns>NAME</columns>
    <columns>Request_type__c</columns>
    <columns>Status__c</columns>
    <columns>Organisation__c</columns>
    <columns>Assigned_Team__c</columns>
    <columns>Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Pricing Support Requests</label>
    <language>en_US</language>
</ListView>