force-app/main/default/objects/Internal_Request__c/listViews/Product_Specialist_Queue_Internal_Request.listView-meta.xml
<ListView>
    <fullName>Product_Specialist_Queue_Internal_Request</fullName>
    <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>Pricing_Analyst_Manager__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Request_type__c</columns>
    <columns>Status__c</columns>
    <columns>Organisation__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Name_of_Product_Specialist__c</columns>
    <columns>Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Initial Review Required,In Progress</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Further Information Provided by Sales</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approval Required,Review of Pricing Response Requested</value>
    </filters>
    <filters>
        <field>Assigned_Team__c</field>
        <operation>equals</operation>
        <value>Product Specialist Team</value>
    </filters>
    <label>Product Specialist Queue</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>