force-app/main/default/objects/Internal_Request__c/listViews/System_Training_Request.listView-meta.xml
<ListView>
    <fullName>System_Training_Request</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Training_type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Internal_Request__c.System_Training</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>System Training Request</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Business_Reporting</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>External_Users</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>