force-app/main/default/objects/Internal_Request__c/listViews/System_Training_Team_Internal_Request.listView-meta.xml
<ListView>
    <fullName>System_Training_Team_Internal_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>System Training Team</label>
    <queue>System_Training_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>